[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Meteoro/Meteoro 4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Background/background.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonte/airstrike.ttf"

[sub_resource type="DynamicFont" id=5]
size = 45
outline_color = Color( 0.921569, 1, 0, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Fonte/PrStart.ttf"

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = SubResource( 6 )

[node name="Menu" type="Node2D"]
position = Vector2( -7, 24 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 135.5, 233 )
scale = Vector2( 0.356944, 0.401563 )
texture = ExtResource( 4 )

[node name="TItulo" type="Node2D" parent="."]

[node name="Label" type="Label" parent="TItulo"]
margin_left = 34.0
margin_top = 87.0
margin_right = 241.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.882353, 1, 0.0509804, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "NAVINHA"

[node name="Items" type="Node2D" parent="."]
position = Vector2( -6, 44 )

[node name="comeco" type="Node2D" parent="Items"]
position = Vector2( 87, 175 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Items/comeco"]
margin_right = 108.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="opcoes" type="Node2D" parent="Items"]
position = Vector2( 68, 223 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Items/opcoes"]
margin_right = 108.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"

[node name="exit" type="Node2D" parent="Items"]
position = Vector2( 94, 273 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Items/exit"]
margin_right = 108.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "EXIT"

[node name="seta" type="Node2D" parent="."]
position = Vector2( 55, 228 )
__meta__ = {
"_edit_group_": true
}

[node name="option" type="Sprite" parent="seta"]
scale = Vector2( 1.28571, 1.28571 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer_Creditos" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Creditos" to="." method="_on_Timer_Creditos_timeout"]
